microserv-user-account/src/main/java/org/example/microservuseraccount/error/exception/RequestBadException.java
package org.example.microservuseraccount.error.exception;

import jakarta.ws.rs.BadRequestException;

public class RequestBadException extends BadRequestException {
    public RequestBadException(String message) {
        super(message);
    }
}
